# parca-agent-operator

./: .gitignore  .wokeignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  charmcraft.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: .jira_sync_config.yaml  renovate-config.js
.github/workflows/: build-and-test.yaml  promote.yaml  pull-request.yaml  quality-gates.yaml  release.yaml  renovate.yaml  tiobe-scan.yaml  update-libs.yaml
lib/charms/certificate_transfer_interface/v1/: certificate_transfer.py
lib/charms/parca_k8s/v0/: parca_config.py  parca_store.py
src/: __init__.py  charm.py  parca_agent.py
tests/functional/: test_parca.py
tests/integration/: conftest.py  test_charm.py
tests/scenario/: test_empty.py
tests/unit/: test_charm.py  test_parca.py
tests/unit/test_charm/: conftest.py  test_charm.py
tests/unit/test_workload/: test_parca.py
