[project]
name = "parca-agent-operator"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "ops",
    # ---PYDEPS---
    # lib/charms/grafana_agent/v0/cos_agent.py
    "cosl>=0.0.51",
    "pydantic<3",
    # lib/charms/tempo_coordinator_k8s/v0/charm_tracing.py
    "opentelemetry-exporter-otlp-proto-http==1.21.0"
]

[project.optional-dependencies]
dev = [
    "coverage[toml]",
    "juju",
    "pytest-operator",
    "pytest",
    "ruff",
    "ops[testing]",
    "pyright"
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
ignore = ["E501", "D107"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104"] }

[tool.ruff.lint.mccabe]
max-complexity = 10
