[project]
name = "parca-agent-operator"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "ops",
    # ---PYDEPS---
    # lib/charms/grafana_agent/v0/cos_agent.py
    "cosl>=0.0.51",
    # lib/charms/certificate_transfer_interface/v1/certificate_transfer.py
    "pydantic>=2",
    # lib/charms/tempo_coordinator_k8s/v0/charm_tracing.py
    "opentelemetry-exporter-otlp-proto-http==1.35.0",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]",
    "juju",
    "pytest-operator",
    "pytest",
    "ruff",
    "ops[testing]",
    "pyright",
    "tenacity",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
ignore = ["E501", "D107"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104"] }

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pyright]
extraPaths = ["lib"]
pythonVersion = "3.8"
pythonPlatform = "All"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"
minversion = "6.0"
log_cli_level = "INFO"
